--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -1,5 +1,18 @@
+body{
+    background-color: #d2d2d2;
+    padding-top: 50px;
+
+}
+
+
 .likeComment{
     float:left;
+}
+
+
+.navbar {
+    margin-bottom: 0px;
+
 }
 
 
@@ -23,6 +36,7 @@ h1{ text-align: center}
 
 
 
+
 /*ROW CENTER*/
 
 .row-centered {
@@ -35,4 +49,29 @@ h1{ text-align: center}
     text-align:left;
     /* inline-block space fix */
     margin-right:-4px;
+}
+
+
+
+
+
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+
+
+/**
+ * Footer Styles
+ */
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
 }
