--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -15,6 +15,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     text-align: center;
     font-size: 100px;
+    margin-top: 28px;
+    margin-bottom: 0px;
 }
 
 #caption{
@@ -24,9 +26,6 @@ h1 {
 /*------------------------------------------------------------------------------------*/
 
 
-.likeComment {
-    float: left;
-}
 
 /*------------------------------------------------------------------------------------*/
 
@@ -75,6 +74,35 @@ html {
     box-sizing: border-box;
 }
 
+/*------------------------------------------------------------------------------------*/
+
+.picBox{
+    margin-top: 0px;
+    margin-bottom: 8px;
+}
+
+.likeAndCommentBox{
+
+    margin-top: 10px;
+    text-align: center;
+}
+
+.rowBox{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.carouselBox{
+    padding-top: 12px;
+    padding-bottom: 28px;
+}
+
+/*------------------------------------------------------------------------------------*/
+
+span.glyphicon-comment, span.glyphicon-heart, span.glyphicon-thumbs-up, span.glyphicon-thumbs-down{
+    font-size: 2em;
+}
+
 /**
  * Footer Styles
  */
@@ -87,6 +115,17 @@ html {
     padding: 1rem;
     background-color: #efefef;
     text-align: center;
+}
+
+.footer-nav{
+    width: 100%;
+    text-align: center;
+}
+
+.footer-nav>li{
+    float: none;
+    display: inline-block;
+
 }
 
 
