--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 80px;
     margin-top: 28px;
     margin-bottom: 0px;
 }
@@ -93,6 +93,13 @@ html {
 .carouselBox{
     padding-top: 12px;
     padding-bottom: 28px;
+}
+
+.loginBox{
+
+    margin-top: 2%;
+    margin-bottom: 2%;
+
 }
 
 /*------------------------------------------------------------------------------------*/
