--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -1,9 +1,14 @@
+
+
 /*------------------------------------------------------------------------------------*/
 body{
     background-color: #a7e5de;
     padding-top: 50px;
     font-family: "Share Tech Mono";
+    height: 100%;
+
 }
+
 
 
 h1, h2, h3, h4, h5, h6 {
