--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -124,6 +124,10 @@ html {
     margin-top: 20px;
 }
 
+.PicByClickBox{
+    margin-bottom: 20px;
+}
+
 /*------------------------------------------------------------------------------------*/
 
 span.glyphicon-comment, span.glyphicon-heart, span.glyphicon-thumbs-up, span.glyphicon-thumbs-down{
