--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -135,6 +135,11 @@ html {
     margin-bottom: 20px;
 }
 
+.aboutBox{
+    margin-right: 10%;
+    margin-left: 10%;
+}
+
 .titelbild{
     margin-bottom: 20px;
 
