--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -1,11 +1,10 @@
-
-
 /*------------------------------------------------------------------------------------*/
 body{
-    background-color: #a7e5de;
+    background-color: #c7f0d5;
     padding-top: 50px;
     font-family: "Share Tech Mono";
     height: 100%;
+    color:#5d5d5d;
 
 }
 
@@ -17,17 +16,18 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     text-align: center;
-    font-size: 80px;
+    font-size: 70px;
     margin-top: 28px;
     margin-bottom: 0px;
 }
 
 .modal-content{
-    background-color: #a7e5de;
+    background-color: #8ee4c3;
 }
 
 #caption{
-    background-color: #5dc0d9;
+
+    background-color: #8ee4c3;
 }
 
 /*------------------------------------------------------------------------------------*/
@@ -40,7 +40,7 @@ h1 {
     margin-bottom: 0px;
     font-family: 'Unica One';
     font-size: 18px;
-    background-color: #5dc0d9;
+    background-color: #8ee4c3;
 
 }
 
@@ -197,7 +197,7 @@ span.glyphicon-comment, span.glyphicon-heart, span.glyphicon-thumbs-up, span.gly
 .btn{
 
     background: transparent;
-    color: #FFFFFF;
+    color: #5d5d5d;
     border: solid;
 
     /* CSS Transition */
