--- a/CSS/mainStylesheet.css
+++ b/CSS/mainStylesheet.css
@@ -26,8 +26,13 @@ h1 {
 }
 
 #caption{
-
+    font-family: "Unica One";
+padding-bottom: 3px;
     background-color: #8ee4c3;
+}
+
+#littleHeading{
+    font-size: larger;
 }
 
 /*------------------------------------------------------------------------------------*/
@@ -82,6 +87,13 @@ html {
 }
 
 /*------------------------------------------------------------------------------------*/
+
+.navbar-brand{
+    margin-top: 0px;
+    padding-top: 5px;
+
+}
+
 
 .picBox{
     margin-top: 0px;
